--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task-pro",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Cherniatynskyi.github.io/task-pro/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
