--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "notiflix": "^3.2.7",
     "react": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
