--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.8",
     "modern-normalize": "^2.0.0",
     "notiflix": "^3.2.7",
     "react": "^18.2.0",
