--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "modern-normalize": "^2.0.0",
