--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://Cherniatynskyi.github.io/task-pro/",
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,7 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-popper": "^2.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
