--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "ant": "^0.2.0",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
@@ -18,6 +19,7 @@
     "modern-normalize": "^2.0.0",
     "notiflix": "^3.2.7",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
