--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "modern-normalize": "^2.0.0",
     "notiflix": "^3.2.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-popper": "^2.3.0",
     "react-redux": "^9.1.0",
