--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task-pro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Cherniatynskyi.github.io/task-pro/",
+  "homepage": "https://GoitStudentsWorks.github.io/node_front_fs_91_Cherniatynskyi/",
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
     "@popperjs/core": "^2.11.8",
